<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorPrimary"
    tools:context=".UI.WelcomeActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <ImageView
            android:id="@+id/icon"
            android:layout_marginTop="100dp"
            android:src="@drawable/icon"
            android:layout_width="200dp"
            android:layout_height="200dp"
            android:layout_gravity="center"/>
        <TextView
            android:id="@+id/txtWelcome"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:textSize="25dp"
            android:textAlignment="center"
            android:textStyle="bold"
            android:layout_marginTop="10dp"
            android:textColor="@color/colorWhite"
            android:text="@string/welcome_title"/>


        <TextView
            android:id="@+id/txtDesc1"
            android:layout_marginTop="30dp"
            android:textSize="20dp"
            android:layout_gravity="center"
            android:layout_width="330dp"
            android:textColor="@color/colorWhite"
            android:layout_height="wrap_content"
            android:textAlignment="center"
            android:text="@string/welcome_description1"
            />

        <TextView
            android:id="@+id/txtDesc2"
            android:layout_marginTop="10dp"
            android:textSize="20dp"
            android:layout_gravity="center"
            android:layout_width="250dp"
            android:textColor="@color/colorWhite"
            android:layout_height="wrap_content"
            android:textAlignment="center"
            android:text="@string/welcome_description2"
            />
    </LinearLayout>

</android.support.constraint.ConstraintLayout>